sass/_base.scss
/* Solar Theme */
$color-bg: #002B36;
$color-yellow: #B58900;
$color-grey: #839496;

/* Base Colors */
$color-white: #fff;
$color-black: #000;

/* Extra */
$color-tertiary: #345f5f;

/* Blu Hues */
$color-blue-dark: #041948;
$color-blue-md: #092461;
$color-blue-light: #20418E;
$color-text: #3B5798;

/* Typography */
$font-primary: "Raleway", sans-serif;
$font-secondary: "Open Sans", sans-serif;

*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

html {
    box-sizing: border-box;
    font-size: 62.5%; // --> 1rem = 10px
    scroll-behavior: smooth;  // not widely supported yet, added js function as fallback

    @include respond(phone) {
        font-size: 50%;  // 1rem = 8px
    }
}

body {
    font-weight: 400;
    line-height: 1.6;
    width: 100%;
    height: 100%;
    background-color: lighten($color-grey, 40%);;
}

